--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
     box-sizing: border-box;
     font-family: "Montserrat";
 }
+
 body {
     background: #262A2F;
 }
+
 .container {
     width: 400px;
     padding: 25px 35px;
@@ -17,11 +19,13 @@ body {
     background: #FFF;
     border-radius: 10px;
 }
+
 .container p {
     font-weight: 600;
     font-size: 15px;
     margin-bottom: 8px;
 }
+
 .container input {
     width: 100%;
     height: 50px;
@@ -31,6 +35,7 @@ body {
     margin: 10px 0 20px;
     border-radius: 5px;
 }
+
 .container button {
     width: 100%;
     height: 50px;
@@ -44,6 +49,15 @@ body {
     margin: 20px 0;
     font-weight: 500;
 }
+
+#download {
+    display: none;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: 500;
+}
+
 #imgBox {
     width: 200px;
     border-radius: 5px;
@@ -51,36 +65,70 @@ body {
     overflow: hidden;
     transition: max-height 1s;
 }
+
 #imgBox img {
     width: 100%;
     padding: 10px;
 
 }
+
 #imgBox.show-img {
     max-height: 300px;
     margin: 10px auto;
     border: 1px solid #D1D1D1;
 }
+
 .error {
     animation: shake 0.1s linear 10;
 }
+
+.portfolio {
+    position: fixed;
+    left: -35px;
+    bottom: 120px;
+    transform: rotate(90deg);
+    padding: 0;
+    margin: 0;
+}
+
+.portfolio a {
+    font-size: medium;
+    background-color: #FFD9AB;
+    padding: 10px 5px 50px 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: #4e342e;
+    font-weight: 500;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+.portfolio a:hover {
+    background-color: #4e342e;
+    color: #FFD9AB;
+}
+
 @keyframes shake {
     0% {
         transform: translateX(0);
         border: 1px solid red;
     }
+
     25% {
         transform: translateX(-2px);
         border: 1px solid red;
     }
+
     50% {
         transform: translateX(0);
         border: 1px solid red;
     }
+
     75% {
         transform: translateX(2px);
         border: 1px solid red;
     }
+
     100% {
         transform: translateX(0);
         border: 1px solid red;
